--- a/predict_ai/covergen/templates/coverletter.html
+++ b/predict_ai/covergen/templates/coverletter.html
@@ -375,6 +375,6 @@
         </div>
 
         <script src="{% static 'covergen/js/coverletter.js' %}"></script>
-        <script src="{% static 'covergen/js/coverletter2.js' %}"></script>
+        <!-- <script src="{% static 'covergen/js/coverletter2.js' %}"></script> -->
     </body>
 </html>
