--- a/predict_ai/covergen/templates/coverletter.html
+++ b/predict_ai/covergen/templates/coverletter.html
@@ -70,9 +70,10 @@
                     <p id="progressText1" class="text-2xl font-semibold text-gray-900 dark:text-white">
                         Loading...
                     </p>
-                    <p id="subText1" class="text-sm text-gray-500 dark:text-gray-400">
+                    <!-- <p id="subText1" class="text-sm text-gray-500 dark:text-gray-400">
                         No active generation.
-                    </p>
+                    </p> -->
+                    <p id="loaderTime" class="text-sm font-medium text-primary mt-2">0s</p>
                 </div>
             </div>
         </div>
