--- a/predict_ai/covergen/templates/coverletter.html
+++ b/predict_ai/covergen/templates/coverletter.html
@@ -284,7 +284,7 @@
                             </div>
 
                             <div data-section="non-tech-req"
-                                class="hidden p-5 rounded-xl bg-orange-50 dark:bg-orange-900/20 border border-orange-200 dark:border-orange-900 flex flex-col gap-3">
+                                class="p-5 rounded-xl bg-orange-50 dark:bg-orange-900/20 border border-orange-200 dark:border-orange-900 flex flex-col gap-3">
                                 <div class="flex justify-between items-start gap-4">
                                     <h3 class="text-base font-bold text-orange-800 dark:text-orange-300">Non-Technical
                                         Requirements</h3>
@@ -300,7 +300,7 @@
                             </div>
 
                             <div data-section="required-tech"
-                                class="hidden p-5 rounded-xl bg-sky-50 dark:bg-sky-900/20 border border-sky-200 dark:border-sky-900 flex flex-col gap-3">
+                                class="p-5 rounded-xl bg-sky-50 dark:bg-sky-900/20 border border-sky-200 dark:border-sky-900 flex flex-col gap-3">
                                 <div class="flex justify-between items-start gap-4">
                                     <h3 class="text-base font-bold text-sky-800 dark:text-sky-300">Required Technologies
                                     </h3>
@@ -318,7 +318,7 @@
                             </div>
 
                             <div data-section="important-point"
-                                class="hidden p-5 rounded-xl bg-blue-50 dark:bg-blue-900/20 border border-blue-200      dark:border-blue-900 flex flex-col gap-3">
+                                class="p-5 rounded-xl bg-blue-50 dark:bg-blue-900/20 border border-blue-200      dark:border-blue-900 flex flex-col gap-3">
                                 <div class="flex justify-between items-start gap-4">
                                     <h3 class="text-base font-bold text-blue-800 dark:text-blue-300">Important Point
                                     </h3>
@@ -377,7 +377,7 @@
                                 <div id="breakdownContainer" class="grid grid-cols-1 @lg:grid-cols-2 gap-6">
 
                                     <div data-section="tech-questions"
-                                        class="hidden p-5 rounded-xl bg-purple-50 dark:bg-purple-900/20 border border-purple-200 dark:border-purple-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-purple-50 dark:bg-purple-900/20 border border-purple-200 dark:border-purple-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-purple-800 dark:text-purple-300">
                                                 Technical Questions</h3>
@@ -393,7 +393,7 @@
                                     </div>
 
                                     <div data-section="non-tech-questions"
-                                        class="hidden p-5 rounded-xl bg-green-50 dark:bg-green-900/20 border border-green-200 dark:border-green-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-green-50 dark:bg-green-900/20 border border-green-200 dark:border-green-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-green-800 dark:text-green-300">
                                                 Non-Technical Questions</h3>
@@ -409,7 +409,7 @@
                                     </div>
 
                                     <div data-section="project-scope"
-                                        class="hidden p-5 rounded-xl bg-teal-50 dark:bg-teal-900/20 border border-teal-200 dark:border-teal-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-teal-50 dark:bg-teal-900/20 border border-teal-200 dark:border-teal-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-teal-800 dark:text-teal-300">Relevant
                                                 Experience</h3>
@@ -423,7 +423,7 @@
                                     </div>
 
                                     <div data-section="unclear-points"
-                                        class="hidden p-5 rounded-xl bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-yellow-800 dark:text-yellow-300">
                                                 Clarifying Questions</h3>
@@ -439,7 +439,7 @@
                                     </div>
 
                                     <div data-section="brief-message"
-                                        class="hidden p-5 rounded-xl bg-rose-50 dark:bg-rose-900/20 border border-rose-200 dark:border-rose-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-rose-50 dark:bg-rose-900/20 border border-rose-200 dark:border-rose-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-rose-800 dark:text-rose-300">Main
                                                 Objective</h3>
@@ -453,7 +453,7 @@
                                     </div>
 
                                     <div data-section="reference-websites"
-                                        class="hidden p-5 rounded-xl bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-yellow-800 dark:text-yellow-300">
                                                 Reference Websites</h3>
@@ -469,7 +469,7 @@
                                     </div>
 
                                     <div data-section="recommendations"
-                                        class="hidden p-5 rounded-xl bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-900 flex flex-col gap-3">
+                                        class="p-5 rounded-xl bg-yellow-50 dark:bg-yellow-900/20 border border-yellow-200 dark:border-yellow-900 flex flex-col gap-3">
                                         <div class="flex justify-between items-start gap-4">
                                             <h3 class="text-base font-bold text-yellow-800 dark:text-yellow-300">
                                                 Recommendations</h3>
